examples/test/testpolicy9892.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9892
  namespace: namespace50
spec:
  podSelector:
    matchLabels:
      key14: value31
      key48: value40
      key9: value49
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key29: value29
      podSelector:
        matchLabels:
          key47: value5
